Fixed overlapping of % value with skill name under skills section

--- a/src/assets/scss/elements/_progressbar.scss
+++ b/src/assets/scss/elements/_progressbar.scss
@@ -2,13 +2,13 @@
     Progress Bar Styles 
 ==========================*/
 
-.progress-charts{
+.progress-charts {
     overflow: hidden;
-    & + .progress-charts{
+    & + .progress-charts {
         margin-top: 30px;
     }
-    h6{
-        &.heading{
+    h6 {
+        &.heading {
             margin-bottom: 15px;
             color: #c3cedd;
             font-size: 12px;
@@ -16,8 +16,8 @@
             letter-spacing: 2px;
             opacity: 0.9;
             font-weight: 400;
-            span{
-                &.percent-label{
+            span {
+                &.percent-label {
                     color: #c3cedd;
                     font-size: 12px;
                     text-transform: uppercase;
@@ -28,26 +28,25 @@
             }
         }
     }
-    .progress{
+    .progress {
         height: 13px;
         overflow: visible;
         font-size: 14px;
         border-radius: 10px;
         padding: 3px;
         background: #212428;
-        box-shadow: inset 8px 8px 16px #00000075, 
-                    inset -8px -8px 16px #383e4575;
-        .progress-bar{
+        box-shadow: inset 8px 8px 16px #00000075, inset -8px -8px 16px #383e4575;
+        .progress-bar {
             overflow: visible;
             position: relative;
             border-radius: 14px;
             background: #f02981;
             background: linear-gradient(145deg, #f02981 0%, #c81901 100%);
-            span{
-                &.percent-label{
+            span {
+                &.percent-label {
                     position: absolute;
                     right: -7px;
-                    top: -22px;
+                    top: -10px;
                     font-weight: 400;
                     color: #c3cedd;
                     font-size: 14px;
